--- a/package.json
+++ b/package.json
@@ -13,8 +13,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.7.2",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "require": "^0.4.4",
+    "require-context": "^1.1.0",
+    "sass": "^1.77.8",
+    "webpack": "^5.93.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
