--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   "dependencies": {
     "axios": "^1.7.2",
     "react": "^18.3.1",
+    "react-content-loader": "^7.0.2",
     "react-dom": "^18.3.1",
+    "react-modal": "^3.16.1",
     "require": "^0.4.4",
     "require-context": "^1.1.0",
     "sass": "^1.77.8",
